# Artceleration-EEE598-Assn2

artceleration_app/: build.gradle
artceleration_app/src/main/cpp/: native-lib.cpp
artceleration_app/src/main/java/edu/asu/msrs/artceleration/: MainViewer.java
artcelerationlibrary/: build.gradle
artcelerationlibrary/cpp/: Android.mk  CMakeLists.txt  ImageTransforms.cpp  ImageTransforms.h  gaussian.cpp  generic.cpp  motion_blur.cpp  neon_edge.cpp  sobel_edge.cpp  unsharp.cpp
artcelerationlibrary/src/main/: AndroidManifest.xml
artcelerationlibrary/src/main/java/edu/asu/msrs/artcelerationlibrary/: ArtLib.java  ArtTransformService.java
